--- a/app/templates/blocks/categories/_categories.sass
+++ b/app/templates/blocks/categories/_categories.sass
@@ -38,8 +38,22 @@
 
 @media only screen and (max-width: 479px)
   .categories
+    margin: 0 -7px
     .element
-      width: calc(100% - 24px)
+      margin: 15px 7px 0
+      width: calc(50% - 14px)
+      font-size: 10px
+      .icon
+        &-ruby
+          font-size: 12px
+        &-new
+          font-size: 16px
+        &-slot
+          font-size: 16px
+        &-cards
+          font-size: 18px
+        &-roulette
+          font-size: 18px
 
 
 /* categories end
