--- a/app/templates/blocks/jackpot/_jackpot.sass
+++ b/app/templates/blocks/jackpot/_jackpot.sass
@@ -62,8 +62,10 @@
 
 @media only screen and (max-width: 479px)
   .jackpot
+    justify-content: center
+
     &__element
-      width: 100%
+      margin: 0 10px 10px
 
 /* jackpot emd
  ---------------------------------------------------- */
